objects/FLODocs__Strongpoint_PermissionSet_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>FLODocs__Active__c</fullName>
        <formula>FLODocs__User__r.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Customization__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Customization</label>
        <referenceTo>FLODocs__FLO_Customization__c</referenceTo>
        <relationshipLabel>Strongpoint PermissionSet Assignments</relationshipLabel>
        <relationshipName>Strongpoint_PermissionSet_Assignments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__Date_Assigned__c</fullName>
        <description>Date Assigned for the permission</description>
        <label>Date Assigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FLODocs__Expires_On__c</fullName>
        <description>Expires On for the permission assignment</description>
        <label>Expires On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FLODocs__PermissionSet_Name__c</fullName>
        <formula>FLODocs__Customization__r.Name</formula>
        <label>PermissionSet Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Strongpoint_PermissionSet_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__Username__c</fullName>
        <formula>FLODocs__User__r.Username</formula>
        <label>Username</label>
        <type>Text</type>
    </fields>
    <label>Strongpoint PermissionSet Assignment</label>
    <nameField>
        <label>Strongpoint PermissionSet Assignment Nam</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Strongpoint PermissionSet Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>